# TwilightSword

./: .gitignore  Cargo.toml  README.md
migrations/2024-12-13-031718_base_moderation_structure/: down.sql  up.sql
migrations/2024-12-13-031718_moderation_structure/: down.sql  up.sql
src/: config.rs  database.rs  lib.rs  main.rs  model.rs  schema.rs
src/discord/: connection.rs  handler.rs  incoming_messages.rs  mod.rs  responses.rs  shared_components.rs
src/discord/commands/: close.rs  list_restricted_users.rs  mod.rs  reply.rs  restrict_ticket_user.rs  setup.rs  unrestrict_ticket_user.rs
src/discord/commands/settings/: action_reason_complain_channel.rs  admin_role.rs  ban_appeal_ticket_channel.rs  custom_categories.rs  existing_partner_ticket_channel.rs  message_reports_channel.rs  mod.rs  new_partner_ticket_channel.rs  staff_role.rs  start_ticket_channel.rs  start_ticket_message.rs
src/discord/commands/settings/ban_appeal_ticket/: channel_get.rs  channel_set.rs  channel_unset.rs  form_get.rs  form_set.rs  form_unset.rs  mod.rs
src/discord/commands/settings/custom_categories/: create_category.rs  form_get.rs  form_set.rs  form_unset.rs  mod.rs
src/discord/commands/settings/existing_partner_ticket/: channel_get.rs  channel_set.rs  channel_unset.rs  form_get.rs  form_set.rs  form_unset.rs  mod.rs
src/discord/commands/settings/new_partner_ticket/: channel_get.rs  channel_set.rs  channel_unset.rs  form_get.rs  form_set.rs  form_unset.rs  mod.rs
src/discord/events/: automod.rs  bans.rs  kicks.rs  mod.rs  timeouts.rs
src/discord/interactions/: create_ticket.rs  mod.rs  reply.rs  setup.rs
src/discord/interactions/settings/: ban_appeal_ticket_form_set.rs  custom_categories_form_get.rs  custom_categories_form_set.rs  custom_categories_form_unset.rs  existing_partner_ticket_form_set.rs  form_set.rs  mod.rs  new_partner_ticket_form_set.rs  start_ticket_message.rs
src/discord/state/: create_ticket.rs  mod.rs  reply.rs  setup.rs
src/discord/state/settings/: ban_appeal_ticket_form_set.rs  custom_categories_form_get.rs  custom_categories_form_set.rs  custom_categories_form_unset.rs  custom_categories_shared.rs  existing_partner_ticket_form_set.rs  form_set.rs  mod.rs  new_partner_ticket_form_set.rs  start_ticket_message.rs  ticket_form_set.rs
src/discord/utils/: invites.rs  mod.rs  permissions.rs  responses.rs  shared_components.rs  tickets.rs  timestamp.rs  users.rs
src/web/: app.rs  auth.rs  mod.rs  permissions.rs  server.rs  session.rs  session_key.rs  state.rs
src/web/pages/: app.rs  dashboard.rs  header.rs  mod.rs  server_utils.rs  shell.rs  utils.rs
src/web/pages/errors/: error.rs  mod.rs  not_found.rs
src/web/pages/guild/: dashboard.rs  mod.rs  not_found.rs  ticket.rs
src/web/pages/staff/: form_editor.rs  manage_forms.rs  mod.rs  open_tickets.rs
style/: _dashboard.scss  _header.scss  _manage_forms.scss  _ticket_list.scss  _whole_page.scss  main.scss
