[package]
name = "twilight-sword"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
cuid2 = "0.1.3"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.2.0"
kdl = "6.1.0"
miette = { version = "7.4.0", features = ["fancy"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-cache-inmemory = "0.16.0-rc.1"
twilight-gateway = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"
twilight-mention = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
type-map = "0.5.0"

[dependencies.diesel]
version = "2.2.6"
features = [
	"chrono",
	"postgres",
	"r2d2"
]

[dependencies.tokio]
version = "1.42.0"
features = [
	"fs",
	"macros",
	"rt-multi-thread",
	"sync",
	"time"
]

[dependencies.twilight-util]
version = "0.16.0-rc.1"
features = [
	"builder",
	"snowflake"
]