[package]
name = "twilight-sword"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
cuid2 = "0.1.3"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.2.0"
kdl = "6.1.0"
miette = { version = "7.4.0", features = ["fancy"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight.git" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git" }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git" }
twilight-mention = { git = "https://github.com/twilight-rs/twilight.git" }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git" }
type-map = "0.5.0"

[dependencies.diesel]
version = "2.2.6"
features = [
	"chrono",
	"postgres",
	"r2d2"
]

[dependencies.tokio]
version = "1.42.0"
features = [
	"fs",
	"macros",
	"rt-multi-thread",
	"sync",
	"time"
]

[dependencies.twilight-util]
git = "https://github.com/twilight-rs/twilight.git"
features = [
	"builder",
	"permission-calculator",
	"snowflake"
]