[package]
name = "twilight-sword"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = { version = "0.1.86", optional = true }
bigdecimal = { version = "0.4.7", optional = true }
chrono = { version = "0.4.39", features = ["serde"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
cuid2 = { version = "0.1.4", optional = true }
diesel_migrations = { version = "2.2.0", optional = true }
kdl = { version = "6.3.3", optional = true }
leptos = "0.7.5"
leptos_axum = { version = "0.7.5", optional = true }
leptos_meta = "0.7.5"
leptos_router = "0.7.5"
oauth2 = { version = "5.0.0", optional = true }
serde = "1.0.217"
serde_json = "1.0.138"
time = { version = "0.3.37", optional = true } # Just for tower-sessions integration; use chrono otherwise
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.2", optional = true }
tower-sessions = { version = "0.13.0", optional = true }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-cache-inmemory = { version = "0.16.0", optional = true }
twilight-gateway = { version = "0.16.0", optional = true }
twilight-http = { version = "0.16.0", optional = true }
twilight-mention = { version = "0.16.0", optional = true }
twilight-model = { version = "0.16.0", optional = true }
twilight-validate = { version = "0.16.0", optional = true }
type-map = { version = "0.5.0", optional = true }

[dependencies.axum]
version = "0.7.9"
features = [
	"macros"
]
optional = true

[dependencies.diesel]
version = "2.2.7"
features = [
	"chrono",
	"numeric",
	"postgres",
	"r2d2"
]
optional = true

[dependencies.diesel-derive-enum]
version = "2.1.0"
features = [
	"postgres"
]
optional = true

[dependencies.miette]
version = "7.5.0"
features = [
	"fancy"
]
optional = true

[dependencies.tokio]
version = "1.43.0"
features = [
	"fs",
	"macros",
	"rt-multi-thread",
	"sync",
	"time"
]
optional = true

[dependencies.twilight-util]
version = "0.16.0"
features = [
	"builder",
	"permission-calculator",
	"snowflake"
]
optional = true

[dependencies.wasm-bindgen]
# This must match the version of wasm-bindgen with which cargo-leptos is built
version = "0.2.100"
optional = true

[features]
hydrate = [
	"dep:console_error_panic_hook",
	"dep:wasm-bindgen",
	"leptos/hydrate"
]
ssr = [
	"dep:async-trait",
	"dep:axum",
	"dep:bigdecimal",
	"dep:cuid2",
	"dep:diesel",
	"dep:diesel-derive-enum",
	"dep:diesel_migrations",
	"dep:kdl",
	"dep:leptos_axum",
	"dep:miette",
	"dep:oauth2",
	"dep:time",
	"dep:tokio",
	"dep:tower",
	"dep:tower-http",
	"dep:tower-sessions",
	"dep:twilight-cache-inmemory",
	"dep:twilight-gateway",
	"dep:twilight-http",
	"dep:twilight-mention",
	"dep:twilight-model",
	"dep:twilight-validate",
	"dep:twilight-util",
	"dep:type-map"
]

[package.metadata.leptos]
site-root = "target/site"
style-file = "style/main.scss"
assets-dir = "assets"
env = "PROD"
bin-features = ["ssr"]
lib-features = ["hydrate"]